--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "json-server --watch data/db.json"
   },
   "dependencies": {
     "@fontsource-variable/mulish": "^5.0.19",
     "@fontsource/poppins": "^5.0.14",
+    "json-server": "^1.0.0-beta.2",
     "lucide-react": "^0.427.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
